Added Battle bots and fixed Resume issues

--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -66,7 +66,7 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 30px 40px 0px 5px; font-size: 19px !important;">
             As a personal Game Jam project, I created the game ColoRise, a colorful medium-fast paced game where your objective is to reach the top of the tower.
             <br />
             <br />
@@ -142,7 +142,7 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 0px 40px 0px 5px; font-size: 19px !important;">
             As a personal project, I made a small version of the Arcade game: Qbert, in Unity3D.
             <br />
             <br />
@@ -223,7 +223,7 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 30px 40px 0px 5px; font-size: 19px !important;">
             As a college project, I created the game Nail Down, a puzzle-combat platformer where your objective is to escape the zombie outbreak.
             <br />
             <br />
@@ -234,6 +234,81 @@
             <br />
             <br />
             This project had to be done in a very short period of time but it is my intention to move from the prototype stage to a finished product.
+        </div>
+    </div>
+    <br />
+</header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
+<header class="intro">
+    <!-- BattleBots -->
+    <div class="intro__wrap">
+        <br />
+        <h1 class="intro__hello pop-wrap">
+            Battle Bots - Personal Project
+            <img class="popup" src="~/Images/battlebots.png" alt="battlebots screenshots" style="border-radius: 5%; max-height: 450px;">
+        </h1>
+        <br />
+        <br />
+        <br />
+        <div class="company">
+            <h2 class="intro__hello">BattleBots has no player yet =(</h2>
+            <br />
+            <br />
+            <br />
+            <h1 class="intro__hello pop-wrap">
+                <iframe width="430" height="315" src="https://www.youtube.com/embed/-qFKmht2H6U" style="border-radius: 10% 10% 10% 10%;" title="Match 3 Game Template" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </h1>
+            <br />
+            <br />
+            <span>Itch.io page</span>
+            <br />
+            <a href="https://danielboldrin.itch.io/battlebots" target="_blank">danielboldrin.itch.io/battlebots</a>
+            <br />
+            <br />
+            <span>Technologies Used</span>
+            <br />
+            <br />
+            <a href="https://unity.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
+                <p class="alt">Unity3D</p>
+            </a>
+            <a href="https://unity.com/features/probuilder" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/probuilder.png" alt="Unity ProBuilder" title="unity.com/features/probuilder">
+                <p class="alt">Unity3D</p>
+            </a>
+            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
+                <p class="alt">C#</p>
+            </a>
+            <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
+                <p class="alt">Visual Studio</p>
+            </a>
+            <a href="https://github.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
+                <p class="alt">Github</p>
+            </a>
+            <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
+                <p class="alt">Mixamo</p>
+            </a>
+            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
+                <p class="alt">Audacity</p>
+            </a>
+        </div>
+
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+            A small project that I have recently started.
+            <br />
+            <br />
+            Battle Bots will be a game where you can build your own robot using a grid system and deploy it to battle!
+            <br />
+            <br />
+            There will be rounds and in between them you can repair/upgrade your robot with points earned.
+            <br />
+            <br />
+            This project is still under development and currently needs the grid system to be implemented.
         </div>
     </div>
     <br />
