Updated colorise video and pages

--- a/Pages/Education.cshtml
+++ b/Pages/Education.cshtml
@@ -106,16 +106,16 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 10px 40px 0px 5px; font-size: 19px !important;">
+            Studied C++, C#, and Python programming.
+            <br />
+            Studied game networking, consoles programming, mobile development and game engines.
+            <br />
+            Experience with Unity3D, Unreal Engine, OpenGL, OGRE and many more...
+            <br />
+            Studied 3D animation, modeling, 2D drawing, and design.
+            <br />
             Graduated with honours.
-            <br />
-            Studied computer languages such as C++, C#, and Python.
-            <br />
-            Studied networking, multiplayer, consoles programming, and mobile programming.
-            <br />
-            Studied game engines such as Unity3D and Unreal Engine.
-            <br />
-            Studied 3D animation, modeling, 2D drawing, and arts.
         </div>
     </div>
     <br />
@@ -222,7 +222,7 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 0px 40px 0px 5px; font-size: 19px !important;">
             Studied computer languages such as C, C++, C#, Java, Lua and Python.
             <br />
             Studied networking, security, operational systems, and database management.
@@ -282,7 +282,7 @@
                 Presented in May and June 2012
             </span>
         </div>
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 0px 40px 0px 5px; font-size: 19px !important;">
             Researched human-computer interaction, different disabilities, and how they impact users` experience with websites.
             <br />
             Researched W3C system affordance best practices and standards.
@@ -317,7 +317,7 @@
             <br />
             <span>Presented in November 2013</span>
         </div>
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 0px 40px 0px 5px; font-size: 19px !important;">
             Volunteered to be one of the Business and Game Development presenter at SESC Araraquara.
             <br />
             Created and presented 3 mini-games made with C# and XNA:
@@ -382,7 +382,7 @@
             <br />
             <span>Volunteered in August 2018</span>
         </div>
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 20px 40px 0px 5px; font-size: 19px !important;">
             Volunteered to be the secret agent acting role during the ball.
             <br />
             Responsible for guests' interactiveness with the main game played during the night.
