--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -156,13 +156,11 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 10px 40px 0px 5px; font-size: 19px !important;">
             Responsible for planning, organizing, and teaching <span class="name">
-                game programming
-            </span> remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>.
+                game programming </span> remote classes with <span class="name">Unity3D</span> and <span class="name">C#</span>.
             <br />
-            Taught semi-private classes of 2 students.
+            Teaching Unity3D private and semi-private.
             <br />
             Recognized for teaching and course coordination excellence.
             <br />
@@ -272,7 +270,7 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 20px 40px 0px 5px; font-size: 19px !important;">
             Planned, organized, and taught
             <span class="name">programming, 3D animation, modeling, circuits, technical drawing, and game design </span>
             presential and remote classes.
@@ -375,13 +373,12 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 10px 40px 0px 5px; font-size: 19px !important;">
             Led a development team responsible for back and front-end programming of an automated medical survey system used over EUA.
             <br />
             Responsible for database management and software architecture using MVC5.
             <br />
             Survey collected feedback via 30 online questions to be answered by patients after their visit to a clinic.
-            <br />
             <br />
             </div>
         </div>
@@ -545,7 +542,7 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 10px 40px 0px 5px; font-size: 19px !important;">
             Worked in a development team responsible for back and front-end programming of a governmental tax exemption application for flood victims in Brazil.
             <br />
             Responsible for designing and implementing the tax exemption calculation API using C# MVC5, HTML5, CSS3, Javascript, and jQuery.
@@ -668,7 +665,7 @@
             <br />
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 0px 40px 0px 5px; font-size: 19px !important;">
             Led a small team in various internal projects for the company, improving the quality of the calls answered by the telecom operators and overall work quality of employees.
             <br />
             Released applications that were used by 3000+ employees.
