--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -19,6 +19,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             Colorise - Game Jam Submission
+            <img src="~/Images/coloriselogo2.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 55px;">
             <img class="popup" src="~/Images/colorisec2.png" alt="ColoRise Screenshots2" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
@@ -32,7 +33,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/colorise.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 350px;">
+                <iframe src="https://www.youtube.com/embed/-2d_6cgNf7I?vq=hd1080&modestbranding=1" title="Colorise" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -42,7 +43,6 @@
             <br />
             <br />
             <span>Technologies Used</span>
-            <br />
             <br />
             <a href="https://unity.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
@@ -66,7 +66,7 @@
             </a>
         </div>
 
-        <div class="intro__tagline" style="text-align: center !important; padding: 30px 40px 0px 5px; font-size: 19px !important;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 20px 40px 0px 5px; font-size: 19px !important;">
             As a personal Game Jam project, I created the game ColoRise, a colorful medium-fast paced game where your objective is to reach the top of the tower.
             <br />
             <br />
@@ -196,7 +196,6 @@
             <br />
             <span>Technologies Used</span>
             <br />
-            <br />
             <a href="https://unity.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
                 <p class="alt">Unity3D</p>
@@ -251,12 +250,12 @@
         <br />
         <br />
         <div class="company">
-            <h2 class="intro__hello">BattleBots has no player yet =(</h2>
+            <h2 class="intro__hello">No player yet =(</h2>
             <br />
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <iframe width="430" height="315" src="https://www.youtube.com/embed/-qFKmht2H6U" style="border-radius: 10% 10% 10% 10%;" title="Match 3 Game Template" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/-qFKmht2H6U?vq=hd1080&modestbranding=1" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" title="BattleBots alpha video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -266,7 +265,6 @@
             <br />
             <br />
             <span>Technologies Used</span>
-            <br />
             <br />
             <a href="https://unity.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
