Fixed spelling error

--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -76,7 +76,7 @@
             You can't touch platforms that are the same color as you.
             <br />
             <br />
-            Every time you jump of a platform your player's color changes to the same as the platform.
+            Every time you jump off a platform your player's color changes to the same as the platform.
             <br />
             <br />
             If you hit your head under a platform, your streak resets.
