Updated Battle bots description and video.

--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -255,7 +255,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <iframe src="https://www.youtube.com/embed/vJaGPu125Ks?vq=hd1080&modestbranding=1" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" title="BattleBots alpha video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Zz3-Vm0jbOE" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" title="BattleBots alpha video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -272,7 +272,7 @@
             </a>
             <a href="https://unity.com/features/probuilder" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/probuilder.png" alt="Unity ProBuilder" title="unity.com/features/probuilder">
-                <p class="alt">Unity3D</p>
+                <p class="alt">Unity3D - ProBuilder</p>
             </a>
             <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
@@ -306,7 +306,10 @@
             There will be rounds and in between them you can repair/upgrade your robot with points earned.
             <br />
             <br />
-            This project is still under development and currently needs the grid system to be implemented.
+            The grid system and the inventory system UI have been implemented with just a few bugs to fix left.
+            <br />
+            <br />
+            This project is still under development and the next step will be adding sound effects and a dialogue system.
         </div>
     </div>
     <br />
