--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -33,7 +33,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <iframe src="https://www.youtube.com/embed/-2d_6cgNf7I?vq=hd1080&modestbranding=1" title="Colorise" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/-2d_6cgNf7I" title="Colorise" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -91,6 +91,84 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
+<header class="intro">
+    <!-- BattleBots -->
+    <div class="intro__wrap">
+        <br />
+        <h1 class="intro__hello pop-wrap">
+            Battle Bots - Personal Project
+            <img class="popup" src="~/Images/battlebots.png" alt="battlebots screenshots" style="border-radius: 5%; max-height: 450px;">
+        </h1>
+        <br />
+        <br />
+        <br />
+        <div class="company">
+            <h2 class="intro__hello">BattleBots WebGL Player</h2>
+            <a href="https://soueuroya.github.io/AutoContersWebGL/" target="_blank"><span>Play on GitHub: soueuroya.github.io/AutoConters</span></a>
+            <br />
+            <br />
+            <br />
+            <h1 class="intro__hello pop-wrap">
+                <iframe src="https://www.youtube.com/embed/Zz3-Vm0jbOE" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" title="BattleBots alpha video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+            </h1>
+            <br />
+            <br />
+            <span>Itch.io page</span>
+            <br />
+            <a href="https://danielboldrin.itch.io/battlebots" target="_blank">danielboldrin.itch.io/battlebots</a>
+            <br />
+            <br />
+            <span>Technologies Used</span>
+            <br />
+            <a href="https://unity.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
+                <p class="alt">Unity3D</p>
+            </a>
+            <a href="https://unity.com/features/probuilder" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/probuilder.png" alt="Unity ProBuilder" title="unity.com/features/probuilder">
+                <p class="alt">Unity3D - ProBuilder</p>
+            </a>
+            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
+                <p class="alt">C#</p>
+            </a>
+            <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
+                <p class="alt">Visual Studio</p>
+            </a>
+            <a href="https://github.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
+                <p class="alt">Github</p>
+            </a>
+            <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
+                <p class="alt">Mixamo</p>
+            </a>
+            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
+                <p class="alt">Audacity</p>
+            </a>
+        </div>
+
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+            A small project that I have recently started.
+            <br />
+            <br />
+            Battle Bots will be a game where you can build your own robot using a grid system and deploy it to battle!
+            <br />
+            <br />
+            There will be rounds and in between them you can repair/upgrade your robot with points earned.
+            <br />
+            <br />
+            The grid system and the inventory system UI have been implemented with just a few bugs to fix left.
+            <br />
+            <br />
+            This project is still under development and the next step will be adding sound effects and a dialogue system.
+        </div>
+    </div>
+    <br />
+</header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
 <br />
 <header class="intro">
     <!-- QBERT -->
@@ -109,7 +187,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/qbertc1.png" alt="Qbert Menu and Level 1" title="QBert Menu and Level 1" style="border-radius: 5%; max-width: 350px;">
+                <iframe src="https://www.youtube.com/embed/IQEm8mvUotg" title="Q*BERT" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -185,7 +263,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/naildownc1.png" alt="NailDown screenshots 1" title="NailDown screenshots 1" style="border-radius: 5%; max-width: 350px;">
+                <iframe src="https://www.youtube.com/embed/2KnkGtwb0HY" title="Nail Down" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -233,83 +311,6 @@
             <br />
             <br />
             This project had to be done in a very short period of time but it is my intention to move from the prototype stage to a finished product.
-        </div>
-    </div>
-    <br />
-</header>
-<div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
-<header class="intro">
-    <!-- BattleBots -->
-    <div class="intro__wrap">
-        <br />
-        <h1 class="intro__hello pop-wrap">
-            Battle Bots - Personal Project
-            <img class="popup" src="~/Images/battlebots.png" alt="battlebots screenshots" style="border-radius: 5%; max-height: 450px;">
-        </h1>
-        <br />
-        <br />
-        <br />
-        <div class="company">
-            <h2 class="intro__hello">No player yet =(</h2>
-            <br />
-            <br />
-            <br />
-            <h1 class="intro__hello pop-wrap">
-                <iframe src="https://www.youtube.com/embed/Zz3-Vm0jbOE" width="430" height="315" style="border-radius: 10% 10% 10% 10%;" title="BattleBots alpha video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
-            </h1>
-            <br />
-            <br />
-            <span>Itch.io page</span>
-            <br />
-            <a href="https://danielboldrin.itch.io/battlebots" target="_blank">danielboldrin.itch.io/battlebots</a>
-            <br />
-            <br />
-            <span>Technologies Used</span>
-            <br />
-            <a href="https://unity.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
-                <p class="alt">Unity3D</p>
-            </a>
-            <a href="https://unity.com/features/probuilder" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/probuilder.png" alt="Unity ProBuilder" title="unity.com/features/probuilder">
-                <p class="alt">Unity3D - ProBuilder</p>
-            </a>
-            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
-                <p class="alt">C#</p>
-            </a>
-            <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
-                <p class="alt">Visual Studio</p>
-            </a>
-            <a href="https://github.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
-                <p class="alt">Github</p>
-            </a>
-            <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
-                <p class="alt">Mixamo</p>
-            </a>
-            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
-                <p class="alt">Audacity</p>
-            </a>
-        </div>
-
-        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
-            A small project that I have recently started.
-            <br />
-            <br />
-            Battle Bots will be a game where you can build your own robot using a grid system and deploy it to battle!
-            <br />
-            <br />
-            There will be rounds and in between them you can repair/upgrade your robot with points earned.
-            <br />
-            <br />
-            The grid system and the inventory system UI have been implemented with just a few bugs to fix left.
-            <br />
-            <br />
-            This project is still under development and the next step will be adding sound effects and a dialogue system.
         </div>
     </div>
     <br />
