Updated Experience and Resume .docx and .pdf

--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -73,7 +73,7 @@
 
         <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             <br />
-            Developed Unity3D games and apps for iOS, Android, and Consoles.
+            Responsible for the development of Unity3D games and apps for iOS, Android, and Consoles.
             <br />
             <br />
         </div>
@@ -84,6 +84,7 @@
 <header class="intro">
     <!-- LUXSONIC -->
     <div class="intro__wrap">
+        <br />
         <h1 class="intro__hello">
             Unity VR Developer
         </h1>
@@ -303,11 +304,11 @@
                 <img src="~/Images/BW/css3.png" alt="CSS3" title="w3.org/Style/CSS/Overview.en.html">
                 <p class="alt">CSS3</p>
             </a>
+            <br />
             <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
                 <p class="alt">Mixamo</p>
             </a>
-            <br />
             <a href="https://azure.microsoft.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/microsoftazure.png" alt="Microsoft Azure" title="azure.microsoft.com">
                 <p class="alt">Microsoft Azure</p>
